
public class ArchivoBinario extends Archivo{
}
