import java.util.List;

public class ArchivoTextoLibroElectronico extends ArchivoTexto{

    @Override
    void guardarLibros(List<Libro> libros) {
        super.guardarLibros(libros);
    }

    @Override
    void cargar() {
        super.cargar();
    }
}
