import java.util.List;

public class ArchivoTextoLibroInfantil extends ArchivoTexto{
    @Override
    void guardarLibros(List<Libro> libros) {
        super.guardarLibros(libros);
    }

    @Override
    void cargar() {
        super.cargar();
    }
}
